[tool.poetry]
name = "boostface"
version = "0.1.0"
description = ""
authors = ["Atticuszz <1831768457@qq.com>"]
readme = "README.md"
packages = [{include = "src", from = "." },{include = "tests", from = "."}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pygizmokit = "^0.4.36"



[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pre-commit = "^3.6.0"
pytest-cov = "^6.0.0"

[tool.poetry.scripts]
tests = 'poetry_scripts:run_tests'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
