[tool.poetry]
name = "boostface-frontend"
version = "0.1.0"
description = ""
authors = ["atticuszz <1831768457@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src", from = "." },{include = "tests", from = "."}]
[tool.poetry.dependencies]
python = ">=3.10,<3.13"
annotated-types = "0.6.0"
anyio = "4.1.0"
certifi = "2023.11.17"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
colorama = "0.4.6"
coloredlogs = "15.0.1"
colorthief = "0.2.1"
contourpy = "1.2.0"
coverage = "7.3.2"
cryptography = "41.0.7"
cycler = "0.12.1"
darkdetect = "0.8.0"
filterpy = "1.4.5"
flatbuffers = "23.5.26"
fonttools = "4.46.0"
h11 = "0.14.0"
httpcore = "1.0.2"
httpx = "0.25.2"
humanfriendly = "10.0"
idna = "3.6"
importlib-resources = "5.13.0"
iniconfig = "2.0.0"
kiwisolver = "1.4.5"
matplotlib = "3.8.2"
mpmath = "1.3.0"
numpy = "1.26.2"
objprint = "0.2.3"
onnx = "1.15.0"
onnxruntime = "1.16.3"
opencv-python = "4.8.1.78"
packaging = "23.2"
pillow = "9.4.0"
pluggy = "1.3.0"
protobuf = "4.25.1"
psutil = "5.9.6"
pycparser = "2.21"
pydantic = "2.5.2"
pydantic-core = "2.14.5"
pyparsing = "3.1.1"
pyqt6 = "6.6.0"
pyqt6-fluent-widgets = "1.4.0"
pyqt6-frameless-window = "0.3.6"
pyqt6-qt6 = "6.6.0"
pyqt6-sip = "13.6.0"
pyqtgraph = "0.13.3"
pyreadline3 = "3.4.1"
pyside6 = "6.6.0"
pyside6-addons = "6.6.0"
pyside6-essentials = "6.6.0"
pytest = "7.4.3"
pytest-asyncio = "0.23.2"
pytest-cov = "4.1.0"
python-dateutil = "2.8.2"
requests = "2.31.0"
scipy = "1.11.4"
shiboken6 = "6.6.0"
six = "1.16.0"
sniffio = "1.3.0"
sympy = "1.12"
typing-extensions = "4.8.0"
urllib3 = "2.1.0"
viztracer = "0.16.1"
websockets = "12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
