[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Atticuszz <1831768457@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app", from = "." },{include = "tests", from = "."}]
[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyqt6-fluent-widgets = "^1.5.1"
pyqt6 = "^6.6.1"
requests = "^2.31.0"
cryptography = "^42.0.5"
opencv-python = "^4.9.0.80"
pydantic = "^2.6.3"
matplotlib = "^3.8.3"
websockets = "^12.0"
filterpy = "^1.4.5"
onnxruntime-gpu = "^1.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
