[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["atticuszz <1831768457@qq.com>"]
packages = [{include = "app", from = "." }]
license = "MIT"
[tool.poetry.dependencies]
python = ">=3.10,<3.13"
websockets = "^12.0"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
pydantic = "^2.6.3"
filterpy = "^1.4.5"
onnxruntime-gpu = "^1.17.1"
streamlit = "^1.31.1"
pygizmokit = "^0.4.36"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
